--- a/src/Skills/Skills.module.scss
+++ b/src/Skills/Skills.module.scss
@@ -17,7 +17,7 @@
 
 .skillsContainer {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
     width: 100%;
     padding-bottom: 45px;
